# featherwing-co2-monitor-rust

./: Cargo.toml  Embed.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: adalogger.rs  main.rs
