[package]
name = "featherwing-co2-monitor-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", default-features = false }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
embassy-executor = { git = "https://github.com/mdarrik/embassy", version = "0.1.0", features = [
    "defmt",
    "integrated-timers",
] }
embassy-futures = { git = "https://github.com/mdarrik/embassy", version = "0.1.0", features = [
    "defmt",
] }
embassy-rp = { git = "https://github.com/mdarrik/embassy", version = "0.1.0", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
] }
embassy-sync = { git = "https://github.com/mdarrik/embassy", version = "0.1.0", features = [
    "defmt",
] }
embassy-time = { git = "https://github.com/mdarrik/embassy", version = "0.1.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
embedded-hal-async = "0.1.0-alpha.2"
embedded-sdmmc = "0.3.0"
futures = { version = "0.3.24", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
heapless = { version = "0.7.16", features = ["defmt"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
scd4x = "0.2.1"
sh1107 = { git = "https://github.com/mdarrik/sh1107-rs", version = "0.4.0" }
shared-bus = { version = "0.2.4", features = ["cortex-m"] }
static_cell = "1.0.0"

[patch."https://github.com/mdarrik/sh1107-rs"]
sh1107 = { path = "../sh1107-rs" }

[[bin]]
name = "featherwing-co2-monitor-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
